# os_in_rust

./: Cargo.toml  build.rs
ros/: Cargo.toml
ros/src/: lib.rs  vga_buffer.rs
ros/src/memory/: area_frame_allocator.rs  mod.rs
ros/src/memory/paging/: entry.rs  mod.rs  table.rs
src/: main.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
