[package]
name = "ros"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"
x86 = "0.5.0"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.bitflags]
git = "https://github.com/phil-opp/bitflags.git"
branch = "no_std"

[lib]
crate-type = ["staticlib"]
name = "ros"
